add sign in button using xpath

--- a/trading_bot.ipynb
+++ b/trading_bot.ipynb
@@ -38,6 +38,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#go to wallmine.com\n",
+    "driver.get('https://wallmine.com')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
