add in conditional to check if we are on the right page

--- a/trading_bot.ipynb
+++ b/trading_bot.ipynb
@@ -51,6 +51,35 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "#conditional to check if we are on the right page\n",
+    "if \"Make Smarter Investments\" in driver.page_source"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sign in\n"
+     ]
+    }
+   ],
+   "source": [
+    "#sign in link - put in xpath\n",
+    "sign_in_link = driver.find_element_by_xpath('/html/body/main/header/div/ul/li[1]/ul/li[3]/a')\n",
+    "print(sign_in_link.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
