add sign in page features

--- a/trading_bot.ipynb
+++ b/trading_bot.ipynb
@@ -48,31 +48,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#conditional to check if we are on the right page\n",
-    "if \"Make Smarter Investments\" in driver.page_source"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sign in\n"
+      "going to sign in page\n"
      ]
     }
    ],
    "source": [
-    "#sign in link - put in xpath\n",
-    "sign_in_link = driver.find_element_by_xpath('/html/body/main/header/div/ul/li[1]/ul/li[3]/a')\n",
-    "print(sign_in_link.text)"
+    "#conditional to check if we are on the right page\n",
+    "if \"Make Smarter Investments\" in driver.page_source:\n",
+    "    sign_in_link = driver.find_element_by_xpath('/html/body/main/header/div/ul/li[1]/ul/li[3]/a')\n",
+    "    sign_in_link.click()\n",
+    "    time.sleep(3) #time delay/loading\n",
+    "    print('going to sign in page')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if \"Sign in here, please.\" in driver.page_source: #conditional to make sure youre on sign in page\n",
+    "    email = driver.find_element_by_xpath('//*[@id=\"user_email\"]')\n",
+    "    sign_in_password = driver.find_element_by_xpath('//*[@id=\"new_user\"]/div[5]/div[1]/div[2]')\n",
+    "    sign_in_password.click()\n",
+    "    time.sleep(0.2)"
    ]
   },
   {
@@ -80,7 +86,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "password "
+   ]
   }
  ],
  "metadata": {
