--- a/trading_bot.ipynb
+++ b/trading_bot.ipynb
@@ -29,6 +29,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from credentials import email, password"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c.nguyen0994@gmail.com\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(email)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
@@ -70,12 +96,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "if \"Sign in here, please.\" in driver.page_source: #conditional to make sure youre on sign in page\n",
-    "    email = driver.find_element_by_xpath('//*[@id=\"user_email\"]')\n",
+    "    login_email = driver.find_element_by_xpath('//*[@id=\"user_email\"]')\n",
     "    sign_in_password = driver.find_element_by_xpath('//*[@id=\"new_user\"]/div[5]/div[1]/div[2]')\n",
     "    sign_in_password.click()\n",
     "    time.sleep(0.2)"
@@ -83,12 +109,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "password "
+    "login_password = driver.find_element_by_xpath('//*[@id=\"user_password\"]')\n",
+    "sign_in_button = driver.find_element_by_xpath('//*[@id=\"new_user\"]/div[5]/div[2]/div[1]/button')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "login_email.send_keys(email)\n",
+    "login_password.send_keys(password)\n",
+    "sign_in_button.click()\n",
+    "time.sleep(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "on the main page\n"
+     ]
+    }
+   ],
+   "source": [
+    " if \"Stock market overview\" in driver.page_source:\n",
+    "        print('on the main page')\n",
+    "        heatmap = driver.find_element_by_xpath('//*[@id=\"homepage-heatmap\"]/a/div[2]')\n",
+    "        heatmap.click()\n",
+    "        time.sleep(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "overview_tab = driver.find_element_by_xpath('/html/body/main/section/div[5]/div/div/div[1]/div/ul/li[1]/a')\n",
+    "overview_tab.click()\n",
+    "time.sleep(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
