--- a/trading_bot.ipynb
+++ b/trading_bot.ipynb
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -300,13 +300,178 @@
        "'AAPL Apple, Inc. NASDAQ Consumer Electronics $1.91T $74.542B 33.68 24.95 2.74 52.096M 62.12% 29 Oct 2020 $109.16 -2.37%'"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "stock_list[28]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stock_list[28].split(' $') #splits on space and $\n",
+    "company_info_parsed = stock_list[28].split(' $')[0] #first element in array to get Apple element before the split\n",
+    "market_cap = stock_list[28].split(' $')[1] #grab the next element in array after split\n",
+    "market_info = stock_list[28].split(' $')[2]\n",
+    "price_info = stock_list[28].split(' $')[3].split(' ')\n",
+    "price = price_info[0]\n",
+    "performance_today = price_info[1]\n",
+    "# price\n",
+    "# price_info"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "here\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Apple, Inc.'"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "company_info = company_info_parsed.split(' ')\n",
+    "\n",
+    "if 'NASDAQ' in company_info:\n",
+    "    idx = company_info.index('NASDAQ')\n",
+    "    exchange = company_info[idx]\n",
+    "    print('here')\n",
+    "elif 'NYSE' in company_info:\n",
+    "    idx = company_info.index('NYSE')\n",
+    "    exchange = company_info[idx]\n",
+    "elif 'NYSEMKT' in company_info:\n",
+    "    idx = company_info.index('NYSEMKT')\n",
+    "    exchange = company_info[idx]\n",
+    "    \n",
+    "industry = \" \".join(company_info[idx + 1:])\n",
+    "symbol = company_info[0]\n",
+    "company_name = \" \".join(company_info[1:idx]) #starts from element 1 and goes to idx, not including idx\n",
+    "# industry\n",
+    "# exchange\n",
+    "company_name\n",
+    "\n",
+    "# currently parsed: symbol, company_name, industry, exchange, market_cap, price, performance_today\n",
+    "# ebitda, p_e, ev_ebitda, debt_equity, average_volume, institutional_ownership, earnings_date"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['74.542B', '33.68', '24.95', '2.74', '52.096M', '62.12%', '29', 'Oct', '2020']"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#parse market info and split the data\n",
+    "market_info.split(' ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'29 Oct 2020'"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#grabbing different elements from the market_info array\n",
+    "ebitda = market_info.split(' ')[0]\n",
+    "p_e = market_info.split(' ')[1]\n",
+    "ev_ebitda = market_info.split(' ')[2]\n",
+    "debt_equity = market_info.split(' ')[3]\n",
+    "average_volume = market_info.split(' ')[4]\n",
+    "institutional_ownership = market_info.split(' ')[5]\n",
+    "earnings_date = \" \".join(market_info.split(' ')[6:])\n",
+    "\n",
+    "earnings_date"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'symbol': 'AAPL',\n",
+       " 'company_name': 'Apple, Inc.',\n",
+       " 'industry': 'Consumer Electronics',\n",
+       " 'exchange': 'NASDAQ',\n",
+       " 'market_cap': '1.91T',\n",
+       " 'price': '109.16',\n",
+       " 'performance_today': '-2.37%',\n",
+       " 'ebitda': '74.542B',\n",
+       " 'p_e': '33.68',\n",
+       " 'ev_ebitda': '24.95',\n",
+       " 'debt_equity': '2.74',\n",
+       " 'average_volume': '52.096M',\n",
+       " 'institutional_ownership': '62.12%',\n",
+       " 'earnings_date': '29 Oct 2020'}"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_stock = {\n",
+    "    \"symbol\": symbol,\n",
+    "    \"company_name\": company_name,\n",
+    "    \"industry\": industry,\n",
+    "    \"exchange\": exchange,\n",
+    "    \"market_cap\": market_cap,\n",
+    "    \"price\": price,\n",
+    "    \"performance_today\": performance_today,\n",
+    "    \"ebitda\": ebitda,\n",
+    "    \"p_e\": p_e,\n",
+    "    \"ev_ebitda\": ev_ebitda,\n",
+    "    \"debt_equity\": debt_equity,\n",
+    "    \"average_volume\": average_volume,\n",
+    "    \"institutional_ownership\": institutional_ownership,\n",
+    "    \"earnings_date\": earnings_date\n",
+    "}\n",
+    "\n",
+    "x_stock"
    ]
   },
   {
